docs(spindle-ui): change docs on how to import

--- a/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
+++ b/packages/spindle-ui/src/BottomButton/BottomButton.stories.mdx
@@ -10,7 +10,7 @@ import { BottomButton } from './BottomButton';
 
 <Source
   language='javascript'
-  code={`import { BottomButton } from '@openameba/spindle-ui/BottomButton'`}
+  code={`import { BottomButton } from '@openameba/spindle-ui'`}
 />
 
 <Source
