--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -11,7 +11,7 @@ import { BreadcrumbItem } from './BreadcrumbItem';
 
 <Source
   language='javascript'
-  code={`import { BreadcrumbList } from '@openameba/spindle-ui/Breadcrumb'`}
+  code={`import { BreadcrumbList } from '@openameba/spindle-ui'`}
 />
 
 <Source
