--- a/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
+++ b/packages/spindle-ui/src/Pagination/Pagination.stories.mdx
@@ -10,7 +10,7 @@ import { Pagination } from './Pagination';
 
 <Source
   language="javascript"
-  code={`import { Pagination } from '@openameba/spindle-ui/Pagination'`}
+  code={`import { Pagination } from '@openameba/spindle-ui'`}
 />
 
 <Source
