docs(spindle-ui): note for Breadcrumb position

--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -99,6 +99,8 @@ import { BreadcrumbItem } from './BreadcrumbItem';
   </Story>
 </Preview>
 
+NOTE: Standard Variantはタップエリアを確保する目的でテキストに余白が指定されています。ページ内での左端を揃えたい場合には、個別に余白を指定しBreadcrumb要素の位置を調整してください。
+
 <Source
   code={`
 <BreadcrumbList variant="standard">
